# rift-money-muling-detection

./: .gitignore  PROJECT_INTERNALS.txt  README.md  readme.MD
backend/: requirements.txt
backend/app/: __init__.py  filters.py  graph_builder.py  main.py  models.py  scoring.py
backend/app/detectors/: __init__.py  cycle_detector.py  shell_detector.py  smurfing_detector.py
backend/app/detectors/detectors/: cycle_detector.py  shell_detector.py  smurfing_detector.py
cpp-backend/: .dockerignore  CMakeLists.txt  Dockerfile
cpp-backend/include/money_muling/: analysis_engine.h  csv_parser.h  cycle_detector.h  decision_tree.h  filters.h  graph_engine.h  json_serializer.h  models.h  red_black_tree.h  scoring.h  shell_detector.h  smurfing_detector.h  store.h
cpp-backend/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: index.css
frontend/src/components/: Aurora.css  Aurora.tsx  FileUpload.tsx  GraphViz.tsx  JsonDownload.tsx  Logo.tsx  NodeDetails.tsx  RingTable.tsx
frontend/src/hooks/: useAnalysis.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/types/: index.ts
test-data/: clean_transactions.csv  cycle_fraud.csv  merchant_trap.csv  mixed_fraud.csv  shell_fraud.csv  smurfing_fraud.csv
